syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = ".;pb";

message SignedData {
    bytes data = 1;
    bytes signature = 2;
}

message Nonce {
    bytes random = 1;
    google.protobuf.Timestamp expire_time = 2;
}

message RefreshToken {
    bytes key = 1;
    uint64 version = 2;
}

message AccessToken {
    string issuer = 1;
    string client_id = 2;
    string user = 3;
    google.protobuf.Timestamp expire_time = 4;
}
